# ugrapheme

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: build_deploy.yml  test.yml
tests/: test_grapheme_fns.py  test_graphemes.py  test_props.py  test_uax29.py
ugrapheme/: __init__.py  alloc.pxd  alloc.pyx  diag.pyx  graphemes.pxd  graphemes.pyx  iterate.pxd  iterate.pyx  justify.pxd  justify.pyx  kk_copy.pxd  latin1.pxd  offsets.pxd  offsets.pyx  ugrapheme.pxd  ugrapheme.pyx  unicode_pyobject.pxd  uprop.pxd
ugrapheme/tables/: control.pxd  extend.pxd  incb.pxd  postcore.pxd  prepend.pxd  xpicto.pxd
ugrapheme_diag/: pystring_info.py
ugrapheme_ucd/: load_data.py
