[project]
name = "ugrapheme"
version = "0.8"
authors = [{name = "!ZAJC!"}]
readme = "README.md"
description = "Unicode 16.0 Extended grapheme clusters in nanoseconds"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Zero-Clause BSD (0BSD)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Cython",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Internationalization",
    "Topic :: Software Development :: Localization",
    "Topic :: Text Processing",
    "Topic :: Terminals",
    "Topic :: Utilities"
]
dependencies = ["uwcwidth"]

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
"Homepage" = "https://github.com/Z4JC/ugrapheme"

[build-system]
requires = ["setuptools", "wheel", "Cython", "uwcwidth"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["ugrapheme", "ugrapheme.tables"]
exclude = []
namespaces = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = ["--import-mode=importlib"]

[tool.cibuildwheel]
build-frontend = "build"
test-command = """
cd $( mktemp -d ) \
&& cp -pr {project}/* ./ \
&& rm -rf ugrapheme \
&& pytest
"""
test-requires = "pytest"
build = "cp313-*"
